packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@augment_rune.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/augment_rune.txt
---
Item {
    item_class: "Augment",
    rarity: Currency,
    name: Some(
        "Greater Glacial Rune",
    ),
    base_type: Some(
        "Rune",
    ),
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: Some(
            30,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 45,
            max: 10,
        },
    ),
    properties: [
        Property {
            name: "Martial Weapon",
            value: "Adds 9 to 15 Cold Damage",
        },
        Property {
            name: "Wand or Staff",
            value: "Gain 10% of Damage as Extra Cold Damage",
        },
        Property {
            name: "Armour",
            value: "+18% to Cold Resistance",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
