packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@expedition_logbook.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/expedition_logbook.txt
---
Item {
    item_class: "Expedition Logbook",
    rarity: Currency,
    name: Some(
        "Expedition Logbook",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 6,
            max: 10,
        },
    ),
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
