packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@inscribed_ultimatum.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/inscribed_ultimatum.txt
---
Item {
    item_class: "Inscribed Ultimatum",
    rarity: Currency,
    name: Some(
        "Inscribed Ultimatum",
    ),
    base_type: None,
    item_level: Some(
        80,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Area Level",
            value: "80",
        },
        Property {
            name: "Number of Trials",
            value: "10",
        },
        Property {
            name: "in knowing the answer",
            value: "all of them.",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
