packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@magic_focus.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/magic_focus.txt
---
Item {
    item_class: "Foci",
    rarity: Magic,
    name: Some(
        "Indomitable Cultist Focus of the Seal",
    ),
    base_type: None,
    item_level: Some(
        64,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            59,
        ),
        strength: None,
        dexterity: None,
        intelligence: Some(
            83,
        ),
    },
    sockets: Some(
        "S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Energy Shield",
            value: "94 (augmented)",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Indomitable",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Energy Shield",
            ],
            stats: [
                "80(80-91)% increased Energy Shield",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Seal",
            ),
            tier: Some(
                8,
            ),
            tags: [
                "Elemental",
                "Cold",
                "Resistance",
            ],
            stats: [
                "+7(6-10)% to Cold Resistance",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
